// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Should apply props correctly. 1`] = `
<div
  class="form-field inline-block"
>
  <label>
    Label
  </label>
   
  <div
    class="input-wrapper"
  >
    <input
      placeholder="placeholder"
      style="width: 5em;"
      type="text"
    />
  </div>
</div>
`;

exports[`<InputField /> Should match snapshot. 1`] = `
<div
  class="form-field"
>
  <!---->
   
  <div
    class="input-wrapper"
  >
    <input
      placeholder="placeholder"
      type="text"
    />
  </div>
</div>
`;
